tcc1 versao final

--- a/template-tcc1/bibliografia.bib
+++ b/template-tcc1/bibliografia.bib
@@ -356,3 +356,9 @@ publisher = {EDITORA ATLAS S.A},
 	Title = {Scrum},
 	Year = {2017}
 }
+
+@article{leticia,
+	Author = {L. S. Santos},
+	Title = {Sistema de Recomendação para Atribuição de Tarefas de Testes Baseado em Perfil de Testadores},
+	Year = {2019}
+}
