--- a/template-tcc1/editaveis/__latexindent_temp.tex
+++ b/template-tcc1/editaveis/__latexindent_temp.tex
@@ -94,7 +94,7 @@ A monografia está organizada nos seguintes capítulos:
 \begin{itemize}
 
 
-        \item Capítulo 2 - Referencial Teórico: descreve os conceitos que fundamentam o trabalho e o conhecimento necessário para que se compreenda a pesquisa realizada.
+        \item Capítulo 2 - \chapref{ch:referencial} Refe rencial Teórico: descreve os conceitos que fundamentam o trabalho e o conhecimento necessário para que se compreenda a pesquisa realizada.
         \item Capítulo 3 - Metodologia: acorda o plano metodológico que orienta o presente trabalho em termos conceituais, bem como de análise de resultados;
 
         \item Capítulo 4 - Proposta: Apresenta a proposta deste trabalho em si, e
