--- a/template-tcc1/editaveis/abstract.tex
+++ b/template-tcc1/editaveis/abstract.tex
@@ -1,10 +1,19 @@
 \begin{resumo}[Abstract]
  \begin{otherlanguage*}{english}
-   This is the english abstract.
+  During the menstrual cycle people go through various hormonal changes that can lead to
+changes in mood, behavior and physical symptoms. These changes can influence
+positively or negatively the performance of certain daily tasks. To help with self-knowledge, improve emotional intelligence and enable them to use the benefits and deal with
+harm in a healthy and conscious way, this work proposes the realization of an application with a task suggestion system based on
+profile and phase of the menstrual cycle. This system uses recommendation system algorithms, which will suggest tasks
+that require more or less energy to be executed. With bibliographic reference
+it was possible to use the calendar method to determine the phase of the cycle and with the
+case study, it was possible to survey the profiles and daily tasks to be used in the
+recommendation system.
 
    \vspace{\onelineskip}
  
    \noindent 
-   \textbf{Key-words}: latex. abntex. text editoration.
+   \textbf{Key-words}: 
+   menstrual cycle. recommendation system. app. influence of the phases.
  \end{otherlanguage*}
 \end{resumo}
