--- a/template-tcc1/editaveis/apendices.tex
+++ b/template-tcc1/editaveis/apendices.tex
@@ -2,12 +2,118 @@
 
 \partapendices
 
-\chapter{Primeiro Apêndice}
-
-Texto do primeiro apêndice.
-
-\chapter{Segundo Apêndice}
-
-Texto do segundo apêndice.
-
+\chapter{Tabulação Primeiro Questionário}
+ 
+    \begin{figure}[h]
+        \centering
+        \includegraphics[keepaspectratio=true,scale=0.6]{figuras/Tab.pdf}
+    \end{figure}
+    
+    \begin{figure}[h]
+        \centering
+        \includegraphics[keepaspectratio=true,scale=0.7]{figuras/Tab2.pdf}
+    \end{figure}
+    
+    \begin{figure}[h]
+        \centering
+        \includegraphics[keepaspectratio=true,scale=0.7]{figuras/Tab3.pdf}
+    \end{figure}
+    
+    \begin{figure}[h]
+        \centering
+        \includegraphics[keepaspectratio=true,scale=0.7]{figuras/Tab4.pdf}
+    \end{figure}
+    
+    \begin{figure}[h]
+        \centering
+        \includegraphics[keepaspectratio=true,scale=0.7]{figuras/Tab5.pdf}
+    \end{figure}
+    
+    \begin{figure}[h]
+        \centering
+        \includegraphics[keepaspectratio=true,scale=0.7]{figuras/Tab6.pdf}
+    \end{figure}
+    
+    \begin{figure}[h]
+        \centering
+        \includegraphics[keepaspectratio=true,scale=0.7]{figuras/Tab7.pdf}
+    \end{figure}
+    
+    \begin{figure}[h]
+        \centering
+        \includegraphics[keepaspectratio=true,scale=0.7]{figuras/Tab8.pdf}
+    \end{figure}
+    
+    \begin{figure}[h]
+        \centering
+        \includegraphics[keepaspectratio=true,scale=0.7]{figuras/Tab9.pdf}
+    \end{figure}
+    
+    \begin{figure}[h]
+        \centering
+        \includegraphics[keepaspectratio=true,scale=0.7]{figuras/Tab10.pdf}
+    \end{figure}
+    
+    \begin{figure}[h]
+        \centering
+        \includegraphics[keepaspectratio=true,scale=0.7]{figuras/Tab11.pdf}
+    \end{figure}
+    
+    \begin{figure}[h]
+        \centering
+        \includegraphics[keepaspectratio=true,scale=0.7]{figuras/Tab12.pdf}
+    \end{figure}
+    
+    \begin{figure}[h]
+        \centering
+        \includegraphics[keepaspectratio=true,scale=0.7]{figuras/Tab13.pdf}
+    \end{figure}
+    
+    \begin{figure}[h]
+        \centering
+        \includegraphics[keepaspectratio=true,scale=0.7]{figuras/Tab14.pdf}
+    \end{figure}
+    
+    \begin{figure}[h]
+        \centering
+        \includegraphics[keepaspectratio=true,scale=0.7]{figuras/Tab15.pdf}
+    \end{figure}
+    
+    \begin{figure}[h]
+        \centering
+        \includegraphics[keepaspectratio=true,scale=0.7]{figuras/Tab16.pdf}
+    \end{figure}
+    
+    \begin{figure}[h]
+        \centering
+        \includegraphics[keepaspectratio=true,scale=0.7]{figuras/Tab17.pdf}
+    \end{figure}
+    
+    \begin{figure}[h]
+        \centering
+        \includegraphics[keepaspectratio=true,scale=0.7]{figuras/Tab18.pdf}
+    \end{figure}
+    
+    \begin{figure}[h]
+        \centering
+        \includegraphics[keepaspectratio=true,scale=0.7]{figuras/Tab19.pdf}
+    \end{figure}
+    
+    \begin{figure}[h]
+        \centering
+        \includegraphics[keepaspectratio=true,scale=0.7]{figuras/Tab20.pdf}
+    \end{figure}
+    
+    \begin{figure}[h]
+        \centering
+        \includegraphics[keepaspectratio=true,scale=0.7]{figuras/Tab21.pdf}
+    \end{figure}
+    
+    \begin{figure}[h]
+        \centering
+        \includegraphics[keepaspectratio=true,scale=0.7]{figuras/Tab22.pdf}
+    \end{figure}
+    
+    
+    
 \end{apendicesenv}
