--- a/template-tcc1/editaveis/informacoes.tex
+++ b/template-tcc1/editaveis/informacoes.tex
@@ -5,8 +5,8 @@
 % Dados do trabalho
 \titulo{Aplicativo para Recomendações de Tarefas Baseadas em Perfil e Fase do Ciclo Menstrual}
 \data{2020}
-\palavraChaveUm{Palavra-chave01}
-\palavraChaveDois{Palavra-chave02}
+\palavraChaveUm{Fases do Ciclo Menstrual}
+\palavraChaveDois{Aplicativo com Sistema de Recomendação}
 
 % Dados da orientacao
 \orientador{Profª. Drª. Milene Serrano}
@@ -16,6 +16,6 @@
 \cdu{02:141:005.6}
 
 % Dados da aprovação do trabalho
-\dataDaAprovacao{01 de junho de 2013 -- Data da aprovação do trabalho}
+\dataDaAprovacao{15 de dezembro de 2020}
 \membroConvidadoUm{Prof. Dr. Maurício Serrano}
-\membroConvidadoDois{Titulação e Nome do Professor Convidado 02}
+\membroConvidadoDois{Profª. Mª. Fabiana Freitas Mendes}
