--- a/template-tcc1/editaveis/metodologia.tex
+++ b/template-tcc1/editaveis/metodologia.tex
@@ -1,4 +1,5 @@
 \chapter[Metodologia]{Metodologia}
+\label{ch:metodologia}
 
 \section{Considerações Iniciais}
 
@@ -95,8 +96,8 @@ forma mais específica cada etapa desse processo.
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[keepaspectratio=true,scale=0.6]{figuras/fluxodeatividade.pdf}
-	\caption{Fluxo das Atividades Desenvolvidas no TCC1 }
+	\includegraphics[keepaspectratio=true,scale=0.6]{figuras/fluxodeatividades.pdf}
+	\caption{Fluxo das Atividades Desenvolvidas no TCC1 e TCC2}
         \label{fig03}
 \end{figure}
 
@@ -113,25 +114,25 @@ inicial do tema e levantadas publicações pertinentes sobre os tópicos dessa m
 \textbf{Elaborar proposta inicial}: nessa etapa, foi elaborada uma proposta inicial que 
 atendesse a necessidade da comunidade e conciliasse domínio e engenharia de software. 
 Optou-se pela criação de um aplicativo com sistema de recomendação de tarefas baseadas no perfil e
-na fase do ciclo menstrual feminino. No capítulo 5, a proposta inicial será mais bem detalhada.
+na fase do ciclo menstrual feminino. No capítulo \ref{ch:proposta}, a proposta inicial será mais bem detalhada.
 
 \textbf{Definir suporte tecnológico}: nessa etapa, foram levantadas as tecnologias necessárias para o desenvolvimento da aplicação, 
-gerenciamento e pesquisa.
+gerenciamento e pesquisa. Gerou o capítulo \ref{ch:suporte} como artefato.
 
 \textbf{Revisar suporte tecnológico}: o capítulo de suporte tecnológico foi revisado pelos orientadores e foram implementadas as devidas correções e sugestões.
 
-\textbf{Definir referencial teórico}: nessa etapa, foram levantadas as principais fontes conceituais para embasar o presente trabalho.
+\textbf{Definir referencial teórico}: nessa etapa, foram levantadas as principais fontes conceituais para embasar o presente trabalho. Gerou o capítulo \ref{ch:referencial} como artefato.
 
-\textbf{Revisar referencial teórico}: o capítulo de referencial teórico foi revisado pelos orientadores e foram implementadas as devidas correções e sugestões.
+\textbf{Revisar referencial teórico}: o capítulo \ref{ch:referencial} foi revisado pelos orientadores e foram implementadas as devidas correções e sugestões.
 
 \textbf{Definir metodologia de pesquisa}: nessa etapa, foi definida a metodologia 
 para guiar a pesquisa, permitindo classificar essa última quanto
-à abordagem, à natureza, aos objetivos, e aos procedimentos.
+à abordagem, à natureza, aos objetivos, e aos procedimentos. Gerou como artefato o capítulo \ref{ch:metodologia}.
 
 \textbf{Revisar metodologia de pesquisa}: o capítulo de metodologia foi revisado pelos orientadores e foram implementadas as devidas correções e sugestões.
 
 \textbf{Definir proposta da aplicação}: delimitou-se o escopo da proposta inicial, obtendo um maior detalhamento 
-dos objetivos gerais e específicos deste trabalho.
+dos objetivos gerais e específicos deste trabalho. Gerou como artefato o capítulo \ref{ch:proposta}.
 
 \textbf{Implementar prova de conceito}: implementou-se parte da proposta, desenvolvendo um protótipo e uma aplicação inicial, com o objetivo 
 de avaliar a viabilidade do projeto e das tecnologias escolhidas.
@@ -177,7 +178,7 @@ por temas mais específicos, tais como: \emph{Hybrid Recommender Systems}, \emph
 de uma conversa com os orientadores, que citaram o trabalho sobre sistema de recomendação realizado por um deles.
 
 
-\section{Metodologia de Desenolvivmento}
+\section{Metodologia de Desenvolvimento}
 
 No escopo do TCC1, foi utilizado o Kanban para o gerenciamento das tarefas que foram 
 desenvolvidas no decorrer da escrita da monografia, da construção da proposta e do desenvolvimento 
@@ -247,7 +248,7 @@ para a entrada no grupo do estudo de caso.
 
 A determinação das questões foi feita através de conversas com as 
 integrantes do grupo bem como com base nos estudos documentados no 
-referencial teórico, Capitúlo 2. Isso possibilitou a aplicação de 
+referencial teórico, Capitúlo \ref{ch:referencial}. Isso possibilitou a aplicação de 
 um questionário para coleta de dados, descrito no Capítulo 5.
 
 Por fim, a preparação do relatório deu-se após a aplicação do questionário, acordado na etapa anterior
@@ -303,7 +304,7 @@ mês de março e o retorno ocorreu no mês de agosto. Algumas atividades continu
 	\begin{tabular}{ccccc}
 		\toprule
 		\textbf{Atividades} & \textbf{Fevereiro} & 
-		\textbf{Março}  & \textbf{Abril}& \textbf{Junho}\\
+		\textbf{Março}  & \textbf{Abril}& \textbf{Maio}\\
 		\midrule
 		\begin{minipage} [t] {0.2\textwidth} \centering Realizar Correções da Banca \end{minipage} & P &  &  &  \\
 		\midrule
