--- a/template-tcc1/editaveis/referencialteorico.tex
+++ b/template-tcc1/editaveis/referencialteorico.tex
@@ -1,4 +1,5 @@
 \chapter[Referencial Teórico]{Referencial Teórico}
+\label{ch:referencial}
 
 \section{Considerações Iniciais}
 
@@ -325,7 +326,7 @@ de recomendação baseadas em heurística e em modelo.
 
 \begin{table}[]
 	\centering
-	\caption{Algoritimos utilizados nas abordagens de recomendações}
+	\caption{Algoritimos Utilizados nas Abordagens de Recomendações}
 	\label{tab01}
 	\begin{tabular}{|c|c|c|}
 	\hline
@@ -360,7 +361,7 @@ assumindo que, \textbf{I} é o conjunto de itens sobre os quais as recomendaçõ
 
 \begin{table}[]
 	\centering
-	\caption{\emph{Background}, entrada e processo utilizados nos Sistemas de Recomendação}
+	\caption{\emph{Background}, Entrada e Processo Utilizados nos Sistemas de Recomendação}
 	\label{tab02}
 	\begin{tabular}{|c|c|c|c|}
 	\hline
@@ -537,7 +538,7 @@ A Filtragem Híbrida utiliza duas ou mais dessas técnicas para tentar aproveita
 
 \begin{table}[]
 	\centering
-	\caption{Pontos positivos e negativos de cada Sistema de Recomendação}
+	\caption{Pontos Positivos e Negativos de Cada Sistema de Recomendação}
 	\label{tab03}
 	\begin{tabular}{|c|c|c|}
 	\hline
