--- a/template-tcc1/editaveis/suporteTecnologico.tex
+++ b/template-tcc1/editaveis/suporteTecnologico.tex
@@ -1,4 +1,5 @@
 \chapter[Suporte Tecnológico]{Suporte Tecnológico}
+\label{ch:suporte}
 
 \section{Considerações Iniciais}
 Neste capítulo, serão aprensentadas brevemente as ferramentas e tecnologias 
@@ -181,8 +182,8 @@ de programação do Flutter, e o Firebase como banco de dados e controle de aces
 As partes envolvendo o código, documentação e escrita do trabalho serão disponibilizadas 
 no Github que utiliza o Git para controle de versão.
 
-O gerenciamento do projeto do aplicativo será feito através do Zenhub, aplicativo disponível no Github, e o Trello será utilizado para o gerenciamento das tarefas do TCC. 
+O gerenciamento do projeto do aplicativo tem sido executada através do Zenhub, aplicativo disponível no Github, e o Trello tem sido utilizado para o gerenciamento das tarefas do TCC. 
 
-A escrita do TCC será realizada utilizando o LaTex com base em um \emph{template} 
+A escrita do TCC tem sido realizada utilizando o LaTex com base em um \emph{template} 
 disponibilizado pela Faculdade do Gama em um repositório do GitHub. 
 
