--- a/template-tcc1/tcc.tex
+++ b/template-tcc1/tcc.tex
@@ -15,14 +15,14 @@
 \input{fixos/fichaCatalografica}
 \input{editaveis/errata}
 \input{fixos/folhaDeAprovacao}
-\input{editaveis/dedicatoria}
+%\input{editaveis/dedicatoria}
 \input{editaveis/agradecimentos}
 \input{editaveis/epigrafe}
 \input{editaveis/resumo}
 \input{editaveis/abstract}
 \input{fixos/listasAutomaticas}
 \input{editaveis/abreviaturas}
-\input{editaveis/simbolos}
+%\input{editaveis/simbolos}
 \input{fixos/indiceAutomatico}
 
 \textual
@@ -32,6 +32,7 @@
 \input{editaveis/suporteTecnologico}
 \input{editaveis/metodologia}
 \input{editaveis/proposta}
+\input{editaveis/capfinal}
 %\input{editaveis/consideracoes}
 %\input{editaveis/textoepostexto}
 %\input{editaveis/elementosdotexto}
