--- a/template-tcc1/editaveis/epigrafe.tex
+++ b/template-tcc1/editaveis/epigrafe.tex
@@ -1,13 +1,8 @@
 \begin{epigrafe}
     \vspace*{\fill}
 	\begin{flushright}
-		\textbf{A epígrafe é opcional. Caso não deseje uma, deixe todo
-		este arquivo em branco}.
 
-		\textit{``Não vos amoldeis às estruturas deste mundo, \\
-		mas transformai-vos pela renovação da mente, \\
-		a fim de distinguir qual é a vontade de Deus: \\
-		o que é bom, o que Lhe é agradável, o que é perfeito.\\
-		(Bíblia Sagrada, Romanos 12, 2)}
+		\textit{"A autoestima é a reputação que assumimos de nós mesmos” \\
+		Branden, Nathaniel}
 	\end{flushright}
 \end{epigrafe}
